--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,7 @@ name: release
 #on: [push, pull_request]
 on:
   push:
-    tags:
-      - '*'
+    branches: [ master ]
 
 env:
   DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
